# music-tools-API

./: .env.example  .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  INSTALLATION.md  LICENSE  MANIFEST.in  NAMING_CONVENTION_UPDATE.md  README.md  REPOSITORY_SETUP_SUMMARY.md  SECURITY_FIXES_03-02-2026.md  STEMS_DEFAULT_BEHAVIOR_UPDATE.md  code_review_03-02-2026.md  docker-compose.yml  main.py  nginx.conf  pyproject.toml  pyvenv.cfg  quick-start.sh  requirements-audio.txt  requirements-core.txt  requirements.txt  setup.py  test_auth.py  test_naming_convention.py  test_stems_default_behavior.py  todo.txt
.codeagent/: CHANGELOG.md  README.md  codeagent-snippets.html
.codeagent/current/: database_schema.sql  deployment.md  design_system.md  known_issues.md  memory-log.md  project_context.md  project_history.md  security.md  tasks.md
.codeagent/docs/: app_integration.md  authentication.md  generic.md  hetzner_fastapi_deployment.md  logs.md  opencode.md
.codeagent/prompts/: audit.md  cleanup.md  code-review-nodejs.md  codeagent_update.md  document.md  implement.md  migrate.md  plan.md  readme-prompts.md  readme.md  run.md  self-check-conventions.md
.codeagent/scripts/: codeagent.sh  opencode-wrap.sh
app/: __init__.py
app/api/routes/: downloads.py  stems.py  youtube.py
app/core/: auth.py  cleanup.py  config.py  memory_management.py  metrics.py  upload_validation.py
app/models/: requests.py  responses.py
app/services/: stem_service.py  youtube_service.py
docs/: P1_MEMORY_MANAGEMENT_RESOLUTION.md  code_review_02-02-2026.md
examples/: audio_quality_examples.sh  curl_examples.sh  python_client.py  stem_separation_examples.sh  test_api.py
scripts/: build_dist.sh  cleanup.sh  deploy.sh  fix-port-conflicts.sh  start.sh  stop.sh
